# MHWpy

./: .gitignore  README.md  tests.py
.github/workflows/: auto-assign.yml  workflow.yml
MHWpi/mhw_api_wrapper/: __init__.py  ailments.py  armors.py  charms.py  decorations.py  details.py  events.py  items.py  locations.py  mhw_wrapper.py  monsters.py  motion.py  protection_skills.py  skills.py  weapon.py
MHWpi/src/mhw_api_wrapper/: __init__.py  ailments.py  armor.py  decorations.py  details.py  events.py  item.py  skills.py  weapon.py
doc/pages/: armor.html  object.html
wrapper/: LICENCE  README.md  pyproject.toml  setup.py
wrapper/src/mhw_api_wrapper/: .pypirc  charms.py  locations.py  mhw_wrapper.py  monsters.py  motion.py
