[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
[project]
name = "MonsterHunterWorldPy"
version = "1.0.0"
authors = [
  { name="Wishrito" },
]
description = "a Python API wrapper for Monster Hunter World"
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/Wishrito/MHWpy"
"Bug Tracker" = "https://github.com/Wishrito/MHWpy/issues"